Perkin-UAT/force-app/main/default/objects/Quote_History__c/Quote_History__c.object-meta.xml
<CustomObject>
    <description>Historical Quotation History. Refer to local QuoteStudioTwo.net application or the Quote Approval Centre for details.</description>
    <label>Quotation</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>