Perkin-UAT/force-app/main/default/objects/Quote_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotation History</relationshipLabel>
    <relationshipName>R00N30000001XbYeEAK</relationshipName>
    <type>Lookup</type>
</CustomField>