Perkin-UAT/force-app/main/default/objects/Quote_History__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <label>Net Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>