Perkin-UAT/force-app/main/default/objects/Quote_History__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quotation History</relationshipLabel>
    <relationshipName>R00N30000001XbfaEAC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>