Perkin-UAT/force-app/main/default/objects/Quote_History__c/fields/Quote_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Created_Date__c</fullName>
    <label>Created</label>
    <type>Date</type>
</CustomField>