Perkin-UAT/force-app/main/default/objects/Quote_History__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <label>Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>